target/generated-sources/antlr4/ArgQLBNFParser.java
// Generated from ArgQLBNF.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ArgQLBNFParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, MATCH=15, RETURN=16, 
		ATTACK=17, REBUT=18, UNDERCUT=19, SUPPORT=20, ENDORSE=21, BACK=22, VARIABLE=23, 
		EMPTYSET=24, TIMESTAMP=25, AUTHOR=26, SCHEME=27, DOTS=28, TEXT=29, INT=30, 
		WS=31;
	public static final int
		RULE_query = 0, RULE_dialogue_pattern = 1, RULE_argpattern = 2, RULE_premisePattern = 3, 
		RULE_conclusionPattern = 4, RULE_premiseFilters = 5, RULE_argFilters = 6, 
		RULE_metadata = 7, RULE_inclusionFilter = 8, RULE_joinFilter = 9, RULE_disjointFilter = 10, 
		RULE_propositionSet = 11, RULE_propositionVar = 12, RULE_pathpattern = 13, 
		RULE_pp = 14, RULE_relation = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "dialogue_pattern", "argpattern", "premisePattern", "conclusionPattern", 
			"premiseFilters", "argFilters", "metadata", "inclusionFilter", "joinFilter", 
			"disjointFilter", "propositionSet", "propositionVar", "pathpattern", 
			"pp", "relation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'<'", "'>'", "'['", "']'", "'/'", "'.'", "'!'", "'{'", 
			"'}'", "'('", "')'", "'*'", "'+'", null, null, null, null, null, null, 
			null, null, null, "'_'", null, null, null, "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "MATCH", "RETURN", "ATTACK", "REBUT", "UNDERCUT", "SUPPORT", 
			"ENDORSE", "BACK", "VARIABLE", "EMPTYSET", "TIMESTAMP", "AUTHOR", "SCHEME", 
			"DOTS", "TEXT", "INT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ArgQLBNF.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArgQLBNFParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class QueryContext extends ParserRuleContext {
		public TerminalNode MATCH() { return getToken(ArgQLBNFParser.MATCH, 0); }
		public TerminalNode RETURN() { return getToken(ArgQLBNFParser.RETURN, 0); }
		public List<Dialogue_patternContext> dialogue_pattern() {
			return getRuleContexts(Dialogue_patternContext.class);
		}
		public Dialogue_patternContext dialogue_pattern(int i) {
			return getRuleContext(Dialogue_patternContext.class,i);
		}
		public List<TerminalNode> VARIABLE() { return getTokens(ArgQLBNFParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ArgQLBNFParser.VARIABLE, i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(MATCH);
			{
			setState(33);
			dialogue_pattern();
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(34);
				match(T__0);
				setState(35);
				dialogue_pattern();
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(41);
			match(RETURN);
			{
			setState(42);
			match(VARIABLE);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(43);
				match(T__0);
				setState(44);
				match(VARIABLE);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dialogue_patternContext extends ParserRuleContext {
		public List<ArgpatternContext> argpattern() {
			return getRuleContexts(ArgpatternContext.class);
		}
		public ArgpatternContext argpattern(int i) {
			return getRuleContext(ArgpatternContext.class,i);
		}
		public List<PathpatternContext> pathpattern() {
			return getRuleContexts(PathpatternContext.class);
		}
		public PathpatternContext pathpattern(int i) {
			return getRuleContext(PathpatternContext.class,i);
		}
		public Dialogue_patternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dialogue_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterDialogue_pattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitDialogue_pattern(this);
		}
	}

	public final Dialogue_patternContext dialogue_pattern() throws RecognitionException {
		Dialogue_patternContext _localctx = new Dialogue_patternContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dialogue_pattern);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			argpattern();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << ATTACK) | (1L << REBUT) | (1L << UNDERCUT) | (1L << SUPPORT) | (1L << ENDORSE) | (1L << BACK))) != 0)) {
				{
				{
				setState(51);
				pathpattern(2);
				setState(52);
				argpattern();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgpatternContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(ArgQLBNFParser.VARIABLE, 0); }
		public PremisePatternContext premisePattern() {
			return getRuleContext(PremisePatternContext.class,0);
		}
		public ConclusionPatternContext conclusionPattern() {
			return getRuleContext(ConclusionPatternContext.class,0);
		}
		public ArgFiltersContext argFilters() {
			return getRuleContext(ArgFiltersContext.class,0);
		}
		public TerminalNode DOTS() { return getToken(ArgQLBNFParser.DOTS, 0); }
		public ArgpatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argpattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterArgpattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitArgpattern(this);
		}
	}

	public final ArgpatternContext argpattern() throws RecognitionException {
		ArgpatternContext _localctx = new ArgpatternContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_argpattern);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(59);
				match(VARIABLE);
				}
				break;
			case 2:
				{
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VARIABLE) {
					{
					setState(60);
					match(VARIABLE);
					setState(61);
					match(DOTS);
					}
				}

				setState(64);
				match(T__1);
				setState(65);
				premisePattern();
				setState(66);
				match(T__0);
				setState(67);
				conclusionPattern();
				setState(68);
				match(T__2);
				}
				break;
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(72);
				argFilters();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PremisePatternContext extends ParserRuleContext {
		public PropositionSetContext propositionSet() {
			return getRuleContext(PropositionSetContext.class,0);
		}
		public PropositionVarContext propositionVar() {
			return getRuleContext(PropositionVarContext.class,0);
		}
		public PremiseFiltersContext premiseFilters() {
			return getRuleContext(PremiseFiltersContext.class,0);
		}
		public TerminalNode EMPTYSET() { return getToken(ArgQLBNFParser.EMPTYSET, 0); }
		public PremisePatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_premisePattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterPremisePattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitPremisePattern(this);
		}
	}

	public final PremisePatternContext premisePattern() throws RecognitionException {
		PremisePatternContext _localctx = new PremisePatternContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_premisePattern);
		int _la;
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				propositionSet();
				}
				break;
			case VARIABLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				propositionVar();
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(77);
					premiseFilters();
					}
				}

				}
				break;
			case EMPTYSET:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				match(EMPTYSET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConclusionPatternContext extends ParserRuleContext {
		public PropositionVarContext propositionVar() {
			return getRuleContext(PropositionVarContext.class,0);
		}
		public TerminalNode TEXT() { return getToken(ArgQLBNFParser.TEXT, 0); }
		public ConclusionPatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conclusionPattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterConclusionPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitConclusionPattern(this);
		}
	}

	public final ConclusionPatternContext conclusionPattern() throws RecognitionException {
		ConclusionPatternContext _localctx = new ConclusionPatternContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conclusionPattern);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				propositionVar();
				}
				break;
			case TEXT:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PremiseFiltersContext extends ParserRuleContext {
		public InclusionFilterContext inclusionFilter() {
			return getRuleContext(InclusionFilterContext.class,0);
		}
		public JoinFilterContext joinFilter() {
			return getRuleContext(JoinFilterContext.class,0);
		}
		public DisjointFilterContext disjointFilter() {
			return getRuleContext(DisjointFilterContext.class,0);
		}
		public PremiseFiltersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_premiseFilters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterPremiseFilters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitPremiseFilters(this);
		}
	}

	public final PremiseFiltersContext premiseFilters() throws RecognitionException {
		PremiseFiltersContext _localctx = new PremiseFiltersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_premiseFilters);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__3);
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				{
				setState(88);
				inclusionFilter();
				}
				break;
			case T__6:
				{
				setState(89);
				joinFilter();
				}
				break;
			case T__7:
				{
				setState(90);
				disjointFilter();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(93);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgFiltersContext extends ParserRuleContext {
		public TerminalNode SCHEME() { return getToken(ArgQLBNFParser.SCHEME, 0); }
		public TerminalNode DOTS() { return getToken(ArgQLBNFParser.DOTS, 0); }
		public TerminalNode TEXT() { return getToken(ArgQLBNFParser.TEXT, 0); }
		public MetadataContext metadata() {
			return getRuleContext(MetadataContext.class,0);
		}
		public ArgFiltersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argFilters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterArgFilters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitArgFilters(this);
		}
	}

	public final ArgFiltersContext argFilters() throws RecognitionException {
		ArgFiltersContext _localctx = new ArgFiltersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argFilters);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__3);
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SCHEME:
				{
				setState(96);
				match(SCHEME);
				setState(97);
				match(DOTS);
				setState(98);
				match(TEXT);
				}
				break;
			case TIMESTAMP:
			case AUTHOR:
				{
				setState(99);
				metadata();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(102);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetadataContext extends ParserRuleContext {
		public TerminalNode TIMESTAMP() { return getToken(ArgQLBNFParser.TIMESTAMP, 0); }
		public TerminalNode DOTS() { return getToken(ArgQLBNFParser.DOTS, 0); }
		public TerminalNode TEXT() { return getToken(ArgQLBNFParser.TEXT, 0); }
		public TerminalNode AUTHOR() { return getToken(ArgQLBNFParser.AUTHOR, 0); }
		public MetadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metadata; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterMetadata(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitMetadata(this);
		}
	}

	public final MetadataContext metadata() throws RecognitionException {
		MetadataContext _localctx = new MetadataContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_metadata);
		try {
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIMESTAMP:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				match(TIMESTAMP);
				setState(105);
				match(DOTS);
				setState(106);
				match(TEXT);
				}
				break;
			case AUTHOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				match(AUTHOR);
				setState(108);
				match(DOTS);
				setState(109);
				match(TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InclusionFilterContext extends ParserRuleContext {
		public PropositionSetContext propositionSet() {
			return getRuleContext(PropositionSetContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(ArgQLBNFParser.VARIABLE, 0); }
		public InclusionFilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inclusionFilter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterInclusionFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitInclusionFilter(this);
		}
	}

	public final InclusionFilterContext inclusionFilter() throws RecognitionException {
		InclusionFilterContext _localctx = new InclusionFilterContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inclusionFilter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__5);
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				{
				setState(113);
				propositionSet();
				}
				break;
			case VARIABLE:
				{
				setState(114);
				match(VARIABLE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JoinFilterContext extends ParserRuleContext {
		public PropositionSetContext propositionSet() {
			return getRuleContext(PropositionSetContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(ArgQLBNFParser.VARIABLE, 0); }
		public JoinFilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_joinFilter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterJoinFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitJoinFilter(this);
		}
	}

	public final JoinFilterContext joinFilter() throws RecognitionException {
		JoinFilterContext _localctx = new JoinFilterContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_joinFilter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__6);
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				{
				setState(118);
				propositionSet();
				}
				break;
			case VARIABLE:
				{
				setState(119);
				match(VARIABLE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisjointFilterContext extends ParserRuleContext {
		public PropositionSetContext propositionSet() {
			return getRuleContext(PropositionSetContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(ArgQLBNFParser.VARIABLE, 0); }
		public DisjointFilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disjointFilter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterDisjointFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitDisjointFilter(this);
		}
	}

	public final DisjointFilterContext disjointFilter() throws RecognitionException {
		DisjointFilterContext _localctx = new DisjointFilterContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_disjointFilter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__7);
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				{
				setState(123);
				propositionSet();
				}
				break;
			case VARIABLE:
				{
				setState(124);
				match(VARIABLE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropositionSetContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(ArgQLBNFParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(ArgQLBNFParser.TEXT, i);
		}
		public PropositionSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propositionSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterPropositionSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitPropositionSet(this);
		}
	}

	public final PropositionSetContext propositionSet() throws RecognitionException {
		PropositionSetContext _localctx = new PropositionSetContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_propositionSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__8);
			setState(128);
			match(TEXT);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(129);
				match(T__0);
				setState(130);
				match(TEXT);
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropositionVarContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(ArgQLBNFParser.VARIABLE, 0); }
		public PropositionVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propositionVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterPropositionVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitPropositionVar(this);
		}
	}

	public final PropositionVarContext propositionVar() throws RecognitionException {
		PropositionVarContext _localctx = new PropositionVarContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_propositionVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathpatternContext extends ParserRuleContext {
		public int a;
		public List<PpContext> pp() {
			return getRuleContexts(PpContext.class);
		}
		public PpContext pp(int i) {
			return getRuleContext(PpContext.class,i);
		}
		public PathpatternContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PathpatternContext(ParserRuleContext parent, int invokingState, int a) {
			super(parent, invokingState);
			this.a = a;
		}
		@Override public int getRuleIndex() { return RULE_pathpattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).enterPathpattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgQLBNFListener ) ((ArgQLBNFListener)listener).exitPathpattern(this);
		}
	}

	public final PathpatternContext pathpattern(int a) throws RecognitionException {
		PathpatternContext _localctx = new PathpatternContext(_ctx, getState(), a);
		enterRule(_localctx, 26, RULE_pathpattern);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			pp(2);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(141);
				match(T__5);
				setState(142);
				pp(2);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
